--- a/Exercise-3-problem-1.ipynb
+++ b/Exercise-3-problem-1.ipynb
@@ -285,9 +285,9 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "#for weather in weather_conditions:\n",
-    "#    print(weather)\n",
     "station=''\n",
+    "#for-loop loops 21 times and after every loop adds the text 'Station', numbers \n",
+    "# and .txt to the variable named station\n",
     "for i in range(0,21): # give values from 0 to 20\n",
     "    #print(i)\n",
     "    station = 'Station_'+ str(i) + '.txt' \n",
