--- a/Exercise-3-problem-2.ipynb
+++ b/Exercise-3-problem-2.ipynb
@@ -219,6 +219,7 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
+    "# sorting values\n",
     "for i in temperatures:\n",
     "    if(i < -2):\n",
     "        cold.append(i)\n",
