--- a/Exercise-3-problem-3.ipynb
+++ b/Exercise-3-problem-3.ipynb
@@ -246,6 +246,7 @@
     "# YOUR CODE HERE\n",
     "n = 0\n",
     "n = len(stations) # len = length of stations list\n",
+    "# len = length is the number of items in the list \n",
     "#raise NotImplementedError()"
    ]
   },
